--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </section>
-            <section class="about section">
+            <section class="about section" style="background-color:#343D33 ;">
                 <div class="container about__container">
                     <div class="about__column about__top-img-wrap">
                         <img src="img/content/pic1.png" alt="" class="about__top-img">
